--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ Updated: 2023-12-30 15:51:59
 .form-check {
     --border: #d1d5db !important;
     --cursor: #89909e !important;
-    --checked: #220899 !important;
+    --checked: #e21168 !important;
     --checked-cursor: #fff !important;
     position: relative !important;
     font-size: 16px !important;
@@ -52,8 +52,8 @@ Updated: 2023-12-30 15:51:59
     position: relative !important;
     left: 2px !important;
     top: 2px !important;
-    width: calc(1em - 2px) !important;
-    height: calc(1em - 2px) !important;
+    width: calc(1em - 4px) !important;
+    height: calc(1em - 4px) !important;
     border-radius: 50% !important;
     background-color: var(--cursor) !important;
     transition: background-color 0.3s, transform 0.3s !important;
